--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,13 @@ jobs:
           echo "${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}" | base64 -d > gcreds.json
 
 # downLoad_OT_DATA.py
+        
+      - name: Run download_PO_Data
+        env:
+          GOOGLE_CREDENTIALS_BASE64: gcreds.json
+        run: python download_PO_Data.py
+
+
       - name: Run download_OT_Data
         env:
           GOOGLE_CREDENTIALS_BASE64: gcreds.json
